
<!-- Copyright 2020 Samuel Jones

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License. -->

<resources>
    <string name="app_name">Feline Adoption Agency</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cat_finder">Cat Finder</string>
    <string name="saved_cats">Saved Cats</string>
    <string name="settings">Settings</string>
    <string name="versionString">Version:</string>
    <string name="login">Login</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="contentDescriptionLogoOnNavigationForeground">App logo</string>
    <string name="loginImageDescription">AccountImage Or A Padlock</string>
    <string name="adoption_status">Adoption Status</string>
    <string name="your_information">Your Information</string>
    <string name="person_icon">Person Icon</string>
    <string name="location_icon">location icon</string>
    <string name="phone_icon">phone icon</string>
    <string name="name">Name</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_3_optional">Address Line 3 (Optional)</string>
    <string name="address_line_2_optional">Address Line 2 (Optional)</string>
    <string name="post_code">Post Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="county">County</string>
    <string name="update">UPDATE</string>
    <string name="aboutFirstParagraph">This application is meant as a demonstration of how the adoption of a cat could be fully integrated into an app via a backend database and user verification system. This mobile application was created under an Apache 2.0 License (https://www.apache.org/licenses/LICENSE-2.0)</string>
    <string name="copyrightInformation">Whilst use of this applications source code is free to everyone, the explicit copyright is owned by the sole author Samuel Jones (samjones714@gmail.com)</string>
    <string name="openSourceLocation">It is distributed open source at https://github.com/Pasarus/FelineAdoptionAgencyMajorProject</string>
    <string name="materialDesignPermissions">As part of this application certain icons have been used, these Material Design based icon are created by the community and are distrubuted under SIL Open Font License 1.1 (https://opensource.org/licenses/OFL-1.1).</string>
    <string name="materialDesignGoogleIcons">The icons created by google as part of Material Design are distributed under an Apache 2.0 License (http://www.apache.org/licenses/LICENSE-2.0).</string>
    <string name="templarianPermissions">The following icons, were made under SIL Open Font License 1.1 by @Templarian on Twitter:</string>
    <string name="cat_logo_material_design_icon">Cat Logo Material Design Icon</string>
    <string name="catPictureContentDescription">Cat Picture</string>
    <string name="defaultCatName">Jaskier</string>
    <string name="defaultCatAge">6 Months Old</string>
    <string name="defaultCatLocation">Aberystwyth Cattery</string>
    <string name="favouritebuttononcatcard">favouriteButtonOnCatCard</string>
    <string name="catInfoFragmentImage">The Cat</string>
    <string name="catInfoFragmentName">Jaskier</string>
    <string name="catInfoFragmentAge">6 Months Old</string>
    <string name="catInfoFragmentLocation">Aberystwyth Cattery</string>
    <string name="more_info">More Info:</string>
    <string name="canInfoCanDoIndoors">Indoor Only Cat</string>
    <string name="canInfoCannotDoIndoors">Outdoor Only Cat</string>
    <string name="catInfoCanBeWithDogs">Can be around dogs</string>
    <string name="catInfoCannotBeWithDogs">Cannot be around dogs</string>
    <string name="catInfoCanDealWithCats">Can be with other cats</string>
    <string name="catInfoCannotDealWithCats">Cannot be around other cats</string>
    <string name="catInfoCanBeAroundYoungChildren">Can be around young children</string>
    <string name="catInfoCannotDealWithYoungChildren">Cannot be around young children</string>
    <string name="catInfoCanBeAroundPrimaryAgeKids">Can be around primary school aged kids</string>
    <string name="catInfoCannnotBeAroundPrimaryAgeKids">Cannot be around primary age kids</string>
    <string name="catInfoCanBeAroundHighSchoolkids">Can be around High School children</string>
    <string name="catInfoCannotBeAroundHighSchoolKids">Cannot be around High School kids</string>
    <string name="catInfoIsDisabled">This cat has a disability, please read the description</string>
    <string name="catInfoIsntDisabled">This cat is not disabled</string>
    <string name="catInfoIsNeutered">This cat is Neutered</string>
    <string name="catInfoIsntNeutered">This cat is not Neutered</string>
    <string name="pleaseConfirmUserDetails">Please confirm your user details:</string>
    <string name="adopt_this_cat">Adopt this cat!</string>
    <string name="are_you_sure_you_would_like_to_adopt_catname">Are you sure you would like to adopt this cat?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="catAdoptionConfirmationText">By agreeing to adopt this cat, you agree that an agent of the adoption charity may visit your home to provide a basic routine inspection. This inspection is to ensure the safety of all parties involved, including but not limited to the cat, the adopter, and the inspector. To adopt a cat an administration fee must be made payable during the inspection to the inspector. Furthermore, by agreeing to adopt this cat you provide that you are willing to pay the adoption fee and provide adequate and safe housing for the cat. Please do not adopt a cat if you believe that you are going to be at some point unable to look after this animal, or provide safe housing. If this cat is an outdoor cat you must not live on a main road to avoid the cat being harmed or worse. For further information do not hesistate to call or ask for advice by using the phone number on our website.</string>
    <string name="picture_of_the_cat_being_adopted">picture of the cat being adopted</string>
    <string name="cat_picture">Cat Picture</string>
    <string name="current_status_of_adoption">current status of adoption</string>
    <string name="adoption_status_card_title">Adoption Status:</string>
    <string name="default_text">default text</string>
    <string name="featured_cat_title_text">Featured Cat:</string>
    <string name="adoption_status_title">Your current adoption statuses:</string>
    <string name="no_adoption_or_user_string">You haven\'t signed in to the app yet! please sign in or adopt a cat to see these statuses!</string>
    <string name="adoption_success">You have been accepted please pick up your cat!</string>
    <string name="image_of_the_cat_being_featured">Image of the cat being featured</string>
    <string name="cat_name_default">CatName</string>
    <string name="default_cat_description">Cat description!</string>
    <string name="default_adoption_status">Adoption Status:</string>
    <string name="default_adoption_status_details">This is the adoption status details</string>
    <string name="cancel_button">CANCEL</string>
    <string name="cancel_adoption_default">Are you sure you want to cancel the adoption for this cat?</string>
    <string name="no">NO</string>
    <string name="signInForCatText">Please sign in to use the Saved Cat feature!</string>
    <string name="send">SEND</string>
    <string name="replied_to_request_feedback">Would you like to be replied to, by the developer?</string>
    <string name="feedbackOpening">You will be asked to login to the application if not already done so when you click send, this is to reduce spam, and allow responses from developers, to your emails.</string>
    <string name="help_third_paragraph">Once you find a cat that you may consider adopting tap on the info card. To get more information, after you have decided to adopt a specific cat, scroll down on the extra information screen and click the adopt button, if you haven\'t logged in, you will be asked to login, after logging in click the button again and the adoption forms will assist you.</string>
    <string name="help_second_paragraph">Once using the tool, find a cat by browsing our selection, a cat will be displayed in a info card.</string>
    <string name="help_first_paragraph">You need to find a cat in our helpful cat finder tool!, to do this please navigate to the cat finder tab using the bottom navigation bar.</string>
    <string name="help_title">How to adopt a cat:</string>
    <string name="adoption_news">Adoption news</string>
    <string name="newly_listed_cat">Newly listed cat</string>
    <string name="adoption_status_change">Adoption Status Change</string>
    <string name="all_notifications">All Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="adoption_status_change_description">Notifies a user of any change to their adoptions</string>
    <string name="adoption_news_description">Any news from the adoption app that you may need to know</string>
    <string name="newly_listed_cat_description">When a new cat is listed, recieve a notification</string>
    <string name="logout">logout</string>
    <string name="search">search</string>
</resources>
