<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:id="@+id/catCard"
    app:cardBackgroundColor="@color/cardBackground"
    android:elevation="4dp"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/catPictureCard"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:contentDescription="@string/catPictureContentDescription"
            android:padding="8dp"
            android:src="@drawable/ic_cat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/lineCard"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/catPictureCard"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/catName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultCatName"
            android:textSize="10pt"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/lineCard"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/catAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultCatAge"
            android:textSize="7pt"
            android:paddingStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/catName"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/catLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultCatLocation"
            android:textSize="6pt"
            android:paddingStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/catAge"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/faveButtonCard"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/favouritebuttononcatcard"
            android:src="@drawable/ic_favorite_black_24dp"
            app:layout_constraintTop_toBottomOf="@id/lineCard"
            app:layout_constraintStart_toEndOf="@id/catName"
            app:layout_constraintHorizontal_bias="0.96"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>